<resources>
    <string name="app_name">OCIVR</string>


    <string name="agendamentos">Agendamentos</string>
    <string name="todos_sites">Todos os Sites</string>
    <string name="cadastro">Cadastro</string>
    <string name="prevencao">Prevenção</string>
    <string name="cpl_web">CPL WEB</string>
    <string name="reta_sga">RETA/SGA</string>
    <string name="netq">NETQ</string>
    <string name="circuitos">Circuitos</string>
    <string name="logotipo_ocivr">Logotipo OCIVR</string>
    <string name="introduzir_numero">Introduzir número do circuito</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="botao_pesquisar_circuito">Botão pesquisar circuito</string>
    <string name="configuracoes">Abrir configurações</string>
    <string name="rede_movel">Rede Móvel</string>
    <string name="rede_siresp">Rede SIRESP</string>
    <string name="rede_fixa">Rede Fixa</string>
    <string name="introduz_id_cod_site">Introduz ID Cod Site</string>
    <string name="ver_no_maps">Ver no Maps</string>
    <string name="introduz_id">Introduz um ID</string>
    <string name="site_nao_encontrado">Site não encontrado</string>
    <string name="todas_bases_apagadas">Todas as bases apagadas</string>
    <string name="erro_atualizar_base">Erro ao atualizar uma das bases</string>
    <string name="bases_atualizadas_sucesso">Todas as bases atualizadas com sucesso</string>
    <string name="base_ok">✅ %1$s: OK</string>
    <string name="base_falta">❌ %1$s: --</string>
    <string name="estado_prontas">🟢 Bases prontas (%1$d/4)</string>
    <string name="estado_parciais">🟡 Bases parciais (%1$d/4)</string>
    <string name="estado_nenhuma">🔴 Nenhuma base disponível (0/4)</string>
    <string name="circuitos_total">Circuitos: %1$d registos</string>
    <string name="circuitos_vazio">Circuitos: --</string>
    <string name="ultima_atualizacao">Última atualização: %1$s</string>
    <string name="semana_atual">Semana Atual</string>
    <string name="turno_tarde">TARDE</string>


</resources>